--- a/start.html
+++ b/start.html
@@ -9,5 +9,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Lesson</title>
   </head>
-  <body></body>
+  <body>
+<form>
+   <label for="checkbox">Deseleziona se non vuoi partecipare</label>
+   <input type="checkbox" name="checkbox" id="checkbox" checked>
+   <br>
+   <br>
+   <label for="intervalNumber">Inserisci un numero da 0 a 100</label>
+   <input type="number" min="0" max="100" id="intervalNumber">
+   <br>
+   <br>
+   <label for="datetime">Inserisci la data e l'orario per la prenotazione</label>
+   <input type="datetime-local" id="datetime">
+   <br>
+   <br>
+   <button>Submit</button>
+  </form>
+  </body>
 </html>
